--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Index page test</title>
 </head>
 <body style="background-color: cadetblue;">
-    <h1>HELLO MUMU THIS IS A PRETTY BASIC LANING PAGE</h1>
+    <h1>HELLO MUMU THIS IS A PRETTY BASIC LANDING PAGE</h1>
     <p>This is so random, sorry lol.
         Click the link to see if it brings you
         to the google search page i pretended
         to make although it's just a redirector
         to google lmao.
-        <a href="googlesearch.html" onclick="windows.alert('Thanks mumulu for clicking me')">Click me, i'm a good guy</a>
+        <a href="googlesearch.html" style="font-size: xx-large;" >Click me, i'm a good guy</a>
     </p>
 </body>
 </html>
