--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         to the google search page i pretended
         to make although it's just a redirector
         to google lmao.
-        <a href="googlesearch.html" style="font-size: xx-large;" >Click me, i'm a good guy</a>
+        <p style="font-size: xx-large;"><a href="googlesearch.html" >Click me, i'm a good guy</a></p>
     </p>
 </body>
 </html>
